--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,23 @@ body {
     background-color: rgb(63, 94, 234);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.assignment {
+display: flex;
+padding: 10px;
+margin: 10px;
+background: rgb(122, 241, 248);
+
+}
+
+.assignment img{
+    width: 200px;
+    padding: 10px;
+}
+
 h1 { 
-    color:antiquewhite;
-    text-align: center;
+    text-align:center;
+
 }
 h2 {
-    color:antiquewhite;
-    text-align: center;
-    ;
 }
