--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,46 @@
 body {
-    background-color: rgb(63, 94, 234);
+    background-color:#fffdfc;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.assignments{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .assignment {
-display: flex;
-padding: 10px;
+width: 22%;
+padding: 20px 10px;
 margin: 10px;
-background: rgb(122, 241, 248);
+background: rgb(240, 94, 94);
+border-radius: 5px;
 
 }
 
 .assignment img{
     width: 200px;
     padding: 10px;
+    border:4px solid#FFFF;
+    display: block;
+    margin: auto;
 }
 
+.assignment img:hover{
+    border: 4px dashed black;
+}
+
+
 h1 { 
+    color: rgb(118, 19, 19);
     text-align:center;
 
 }
-h2 {
+h2 {text-align: center;
 }
+
+a{
+    text-decoration: none;
+    color: #FFF;
+}
+
+
